# drowsiness-detection

./: .gitignore  EDA.ipynb  inceptionv3.py  main.py  preprocessing.py  pyproject.toml
haarcascades/: haarcascade_eye.xml  haarcascade_frontalface_default.xml  haarcascade_smile.xml
