[project]
name = "drowsiness-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.20.0",
    "keras>=3.12.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "opencv-python>=5.0.0.93",
    "scipy>=1.15.3",
    "tensorflow[and-cuda]==2.20.0",
    "tf-keras>=2.20.1",
    "wandb>=0.28.0",
]
